@@ -17,7 +17,7 @@ public:
   // Following override to reset idle timeout on any event
   virtual LRESULT WindowProc(UINT message, WPARAM wParam, LPARAM lParam);
 
-  enum {PP_DATA_CHANGED = 0, PP_UPDATE_VARIABLES, PP_UPDATE_PWPOLICY};
+  enum {PP_DATA_CHANGED = 0, PP_UPDATE_VARIABLES, PP_UPDATE_PWPOLICY, PP_UPDATE_TIMES};
 
   DECLARE_DYNAMIC(CPWPropertyPage)
 };
