@@ -799,25 +799,6 @@ BEGIN
     GROUPBOX        "Import under Group?",IDC_STATIC,3,3,218,53
 END
 
-IDD_PICKEXPDATETIME DIALOGEX 0, 0, 212, 95
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Set Password Expiry Date/Time"
-FONT 8, "MS Sans Serif", 400, 0, 0x1
-BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,6,74,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,155,74,50,14
-    CONTROL         "",IDC_EXPIRYDATE,"SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,42,7,84,15
-    CONTROL         "",IDC_EXPIRYTIME,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_UPDOWN | WS_TABSTOP,133,7,48,15
-    RTEXT           "Current Value:",IDC_STATIC,5,55,70,8
-    LTEXT           "Whenever",IDC_STATIC_CURRENT_XTIME,80,55,125,8
-    CONTROL         "On",IDC_SELECTBYDATETIME,"Button",BS_AUTORADIOBUTTON | WS_GROUP,5,9,34,10
-    CONTROL         "In",IDC_SELECTBYDAYS,"Button",BS_AUTORADIOBUTTON,5,33,34,10
-    EDITTEXT        IDC_EXPDAYS,42,30,40,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_EXPDAYSSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS,81,30,10,14
-    LTEXT           "days",IDC_STATIC_LTINTERVAL_NOW,97,33,34,11
-    CONTROL         "Recurring",IDC_REUSE_ON_CHANGE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,133,34,49,8
-END
-
 IDD_DISPLAY_EXPIRED_ENTRIES DIALOGEX 0, 0, 274, 149
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION
 CAPTION "List of Expired Passwords"
@@ -1126,40 +1107,41 @@ BEGIN
     GROUPBOX        "Password History",IDC_STATIC_PWH_ADD,1,75,258,33
 END
 
-IDD_ADDEDIT_DATETIMES DIALOGEX 0, 0, 278, 256
+IDD_ADDEDIT_DATETIMES DIALOGEX 0, 0, 278, 249
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CAPTION | WS_SYSMENU
 CAPTION "Dates and Times"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "On",IDC_SELECTBYDATETIME,"Button",BS_AUTORADIOBUTTON | WS_GROUP,12,40,34,10
-    CONTROL         "In",IDC_SELECTBYDAYS,"Button",BS_AUTORADIOBUTTON,12,59,34,10
-    CONTROL         "",IDC_EXPIRYDATE,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,49,38,84,15
-    CONTROL         "",IDC_EXPIRYTIME,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_UPDOWN | WS_GROUP | WS_TABSTOP,140,38,58,15
-    EDITTEXT        IDC_EXPDAYS,49,57,40,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    CONTROL         "",IDC_EXPDAYSSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS | WS_GROUP,88,57,10,14
-    CONTROL         "Recurring",IDC_REUSE_ON_CHANGE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_GROUP | WS_TABSTOP,140,60,49,8
-    PUSHBUTTON      "S&et",IDC_XTIME_SET,88,93,36,14
-    PUSHBUTTON      "&Clear",IDC_XTIME_CLEAR,140,93,36,14
-    RTEXT           "Created on:",IDC_STATIC_CTIME,6,125,102,8
-    LTEXT           "Whenever",IDC_CTIME,113,125,151,8
-    RTEXT           "Password last changed on:",IDC_STATIC_PMTIME,6,139,102,8
-    LTEXT           "Whenever",IDC_PMTIME,113,139,151,8
-    RTEXT           "Last accessed on:",IDC_STATIC_ATIME,6,153,102,8
-    LTEXT           "Whenever",IDC_ATIME,113,153,151,8
-    RTEXT           "Any field last changed on:",IDC_STATIC_RMTIME,6,166,102,8
-    LTEXT           "Whenever",IDC_RMTIME,113,166,151,8
-    LTEXT           "Whenever",IDC_XTIME,113,14,103,8,WS_TABSTOP
-    LTEXT           "",IDC_XTIME_RECUR,91,24,105,8,WS_TABSTOP
-    GROUPBOX        "Password Expiry",IDC_STATIC_DTEXPGROUP,4,1,269,111
-    RTEXT           "Current Value:",IDC_STATIC_CURRENTVALUE,13,77,70,8
-    LTEXT           "Whenever",IDC_STATIC_CURRENT_XTIME,88,77,158,8
-    LTEXT           "days",IDC_STATIC_LTINTERVAL_NOW,104,59,34,11
-    GROUPBOX        "Statistics",IDC_STATIC_DTSTATS,4,113,268,98
-    RTEXT           "Password Expires on:",IDC_STATIC_XTIME,6,14,102,8
-    RTEXT           "Entry size:",IDC_STATIC_SIZE,6,180,102,8
-    LTEXT           "Static",IDC_ENTRYSIZE,113,180,151,8
-    RTEXT           "Entry Unique ID:",IDC_STATIC_UUID,6,195,102,8
-    LTEXT           "Static",IDC_UUID,113,195,151,8
+    CONTROL         "On",IDC_SELECTBYDATETIME,"Button",BS_AUTORADIOBUTTON | WS_GROUP,12,71,34,10
+    CONTROL         "In",IDC_SELECTBYDAYS,"Button",BS_AUTORADIOBUTTON,12,90,34,10
+    CONTROL         "",IDC_EXPIRYDATE,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,49,69,84,15
+    CONTROL         "",IDC_EXPIRYTIME,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_UPDOWN | WS_GROUP | WS_TABSTOP,140,69,58,15
+    EDITTEXT        IDC_EXPDAYS,49,88,40,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    CONTROL         "",IDC_EXPDAYSSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS | WS_GROUP,88,88,10,14
+    CONTROL         "Recurring",IDC_REUSE_ON_CHANGE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_GROUP | WS_TABSTOP,140,91,49,8
+    PUSHBUTTON      "S&et",IDC_XTIME_SET,95,127,36,14
+    PUSHBUTTON      "&Clear",IDC_XTIME_CLEAR,147,127,36,14
+    RTEXT           "Created on:",IDC_STATIC_CTIME,6,158,102,8
+    LTEXT           "Whenever",IDC_CTIME,113,158,151,8
+    RTEXT           "Password last changed on:",IDC_STATIC_PMTIME,6,172,102,8
+    LTEXT           "Whenever",IDC_PMTIME,113,172,151,8
+    RTEXT           "Last accessed on:",IDC_STATIC_ATIME,6,186,102,8
+    LTEXT           "Whenever",IDC_ATIME,113,186,151,8
+    RTEXT           "Any field last changed on:",IDC_STATIC_RMTIME,6,199,102,8
+    LTEXT           "Whenever",IDC_RMTIME,113,199,151,8
+    LTEXT           "Whenever",IDC_XTIME,113,19,151,8
+    CTEXT           "Static",IDC_XTIME_RECUR,91,32,120,8
+    GROUPBOX        "Password Expiry",IDC_STATIC_DTEXPGROUP,4,3,269,142
+    LTEXT           "days",IDC_STATIC_LTINTERVAL_NOW,104,90,34,11
+    RTEXT           "Original Value:",IDC_STATIC_CURRENTVALUE,6,112,102,8
+    LTEXT           "Whenever",IDC_STATIC_CURRENT_XTIME,113,112,151,8
+    GROUPBOX        "Statistics",IDC_STATIC_DTSTATS,4,146,268,98
+    RTEXT           "Password Expires on:",IDC_STATIC_XTIME,6,19,102,8
+    RTEXT           "Entry size:",IDC_STATIC_SIZE,6,213,102,8
+    LTEXT           "Static",IDC_ENTRYSIZE,113,213,151,8
+    RTEXT           "Entry Unique ID:",IDC_STATIC_UUID,6,228,102,8
+    LTEXT           "Static",IDC_UUID,113,228,151,8
+    LTEXT           "Changing the values/settings below does not become effective until the 'Set' button is pressed",IDC_STATIC,9,47,257,16
 END
 
 IDD_ADDEDIT_PASSWORDPOLICY DIALOGEX 0, 0, 278, 243
@@ -1605,7 +1587,7 @@ BEGIN
     IDD_ADDEDIT_DATETIMES, DIALOG
     BEGIN
         RIGHTMARGIN, 264
-        BOTTOMMARGIN, 240
+        BOTTOMMARGIN, 233
     END
 
     IDD_ADDEDIT_PASSWORDPOLICY, DIALOG
