@@ -30,6 +30,8 @@ None
 
 Bugs fixed in 3.21.1
 ====================
+[2977941] The password expiry date is now updated during edit if the password
+is changed either via the Generate button or by the user manually editing it.
 [2977045] Can now make password expiration date any value from the current
 date.
 [2962916] Save toolbar button only enabled if database is R/W and has been
